// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DatePanel Default 1`] = `
<button
  className="sc-ifAKCX gVaZAi"
  onClick={[Function]}
  selected={false}
>
  <div
    className="sc-bdVaJa sc-bxivhb gBVacm"
  >
    <p
      className="sc-bwzfXH eYinRc"
    >
      22 May 17:00
    </p>
    <p
      className="sc-htpNat ieahgN"
    >
      22 May 17:00
    </p>
  </div>
</button>
`;

exports[`Storyshots DatePanel Outlined 1`] = `
<button
  className="sc-ifAKCX dsHFuC"
  onClick={[Function]}
  selected={true}
>
  <div
    className="sc-bdVaJa sc-bxivhb bHYiZb"
  >
    <p
      className="sc-bwzfXH eYinRc"
    >
      22 May 17:00
    </p>
    <p
      className="sc-htpNat ieahgN"
    >
      22 May 17:00
    </p>
  </div>
</button>
`;

exports[`Storyshots DatePanel Sized 1`] = `
<div
  className="sc-EHOje fqSoJR"
>
  <button
    className="sc-ifAKCX dsHFuC"
    onClick={[Function]}
    selected={true}
  >
    <div
      className="sc-bdVaJa sc-bxivhb bHYiZb"
    >
      <p
        className="sc-bwzfXH eYinRc"
      >
        22 May 17:00
      </p>
      <p
        className="sc-htpNat ieahgN"
      >
        22 May 17:00
      </p>
    </div>
  </button>
</div>
`;

exports[`Storyshots Day Default 1`] = `
<button
  className="sc-iwsKbI dEOVJJ"
  onClick={[Function]}
  selected={false}
>
  <div
    className="sc-bdVaJa sc-htoDjs eqSTEs"
    selected={false}
  >
    <p
      className="sc-dnqmqq hYLeBK"
    >
      Mon. 16
    </p>
    <img
      alt="weather-icon"
      className="sc-bZQynM kDzsBS"
      size={80}
      src="http://openweathermap.org/img/wn/02d@2x.png"
    />
    <div
      className="sc-bdVaJa jFsIQD"
    >
      <p
        className="sc-gzVnrw cAeWqA"
      >
        min: 
        1°
      </p>
      <p
        className="sc-gzVnrw cAeWqA"
      >
        max: 
        5°
      </p>
    </div>
  </div>
</button>
`;

exports[`Storyshots Day Selected 1`] = `
<div
  className="sc-gZMcBi giFyfe"
>
  <button
    className="sc-iwsKbI kbkokl"
    onClick={[Function]}
    selected={true}
  >
    <div
      className="sc-bdVaJa sc-htoDjs httnCg"
      selected={true}
    >
      <p
        className="sc-dnqmqq hYLeBK"
      >
        Mon. 16
      </p>
      <img
        alt="weather-icon"
        className="sc-bZQynM kDzsBS"
        size={80}
        src="http://openweathermap.org/img/wn/02d@2x.png"
      />
      <div
        className="sc-bdVaJa jFsIQD"
      >
        <p
          className="sc-gzVnrw cAeWqA"
        >
          min: 
          1°
        </p>
        <p
          className="sc-gzVnrw cAeWqA"
        >
          max: 
          5°
        </p>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots Day Sized 1`] = `
<div
  className="sc-gZMcBi giFyfe"
>
  <button
    className="sc-iwsKbI dEOVJJ"
    onClick={[Function]}
    selected={false}
  >
    <div
      className="sc-bdVaJa sc-htoDjs eqSTEs"
      selected={false}
    >
      <p
        className="sc-dnqmqq hYLeBK"
      >
        Mon. 16
      </p>
      <img
        alt="weather-icon"
        className="sc-bZQynM kDzsBS"
        size={80}
        src="http://openweathermap.org/img/wn/02d@2x.png"
      />
      <div
        className="sc-bdVaJa jFsIQD"
      >
        <p
          className="sc-gzVnrw cAeWqA"
        >
          min: 
          1°
        </p>
        <p
          className="sc-gzVnrw cAeWqA"
        >
          max: 
          5°
        </p>
      </div>
    </div>
  </button>
</div>
`;

exports[`Storyshots Icon Broken clouds day 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/04d@2x.png"
/>
`;

exports[`Storyshots Icon Broken clouds night 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/04n@2x.png"
/>
`;

exports[`Storyshots Icon Clear sky day 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/01d@2x.png"
/>
`;

exports[`Storyshots Icon Clear sky night 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/01n@2x.png"
/>
`;

exports[`Storyshots Icon Few clouds day 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/02d@2x.png"
/>
`;

exports[`Storyshots Icon Few clouds night 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/02n@2x.png"
/>
`;

exports[`Storyshots Icon Mist day 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/50d@2x.png"
/>
`;

exports[`Storyshots Icon Mist night 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/50n@2x.png"
/>
`;

exports[`Storyshots Icon Rain day 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/10d@2x.png"
/>
`;

exports[`Storyshots Icon Rain night 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/10n@2x.png"
/>
`;

exports[`Storyshots Icon Scattered clouds day 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/03d@2x.png"
/>
`;

exports[`Storyshots Icon Scattered clouds night 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/03n@2x.png"
/>
`;

exports[`Storyshots Icon Shower rain day 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/09d@2x.png"
/>
`;

exports[`Storyshots Icon Shower rain night 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/09n@2x.png"
/>
`;

exports[`Storyshots Icon Snow day 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/13d@2x.png"
/>
`;

exports[`Storyshots Icon Snow night 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/13n@2x.png"
/>
`;

exports[`Storyshots Icon Thunderstorm day 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/11d@2x.png"
/>
`;

exports[`Storyshots Icon Thunderstorm night 1`] = `
<img
  alt="weather-icon"
  className="sc-bZQynM kzEneW"
  size={60}
  src="http://openweathermap.org/img/wn/11n@2x.png"
/>
`;

exports[`Storyshots TempWithIcon Default 1`] = `
<div
  className="sc-gqjmRU fSkQHM"
>
  <img
    alt="weather-icon"
    className="sc-bZQynM kDzsBS"
    size={80}
    src="http://openweathermap.org/img/wn/02d@2x.png"
  />
  <p
    className="sc-VigVT bYzbjH"
  >
    9°
  </p>
</div>
`;

exports[`Storyshots TempWithIcon Sized 1`] = `
<div
  className="sc-jTzLTM dQxiEl"
>
  <div
    className="sc-gqjmRU fSkQHM"
  >
    <img
      alt="weather-icon"
      className="sc-bZQynM kDzsBS"
      size={80}
      src="http://openweathermap.org/img/wn/02d@2x.png"
    />
    <p
      className="sc-VigVT bYzbjH"
    >
      9°
    </p>
  </div>
</div>
`;

exports[`Storyshots TempsOfTheDay Default 1`] = `
<div
  className="sc-bdVaJa jFsIQD"
>
  <p
    className="sc-gzVnrw cAeWqA"
  >
    min: 
    2°
  </p>
  <p
    className="sc-gzVnrw cAeWqA"
  >
    max: 
    10°
  </p>
</div>
`;

exports[`Storyshots Timeslice Default 1`] = `
<button
  className="sc-fjdhpX eNZrSr"
  onClick={[Function]}
  selected={false}
>
  <p
    className="sc-jzJRlG hveoRz"
  >
    12:00
  </p>
</button>
`;

exports[`Storyshots Timeslice Selected 1`] = `
<button
  className="sc-fjdhpX byJkBY"
  onClick={[Function]}
  selected={true}
>
  <p
    className="sc-jzJRlG hveoRz"
  >
    12:00
  </p>
</button>
`;

exports[`Storyshots Timeslice Sized 1`] = `
<div
  className="sc-cSHVUG dMgnZf"
>
  <button
    className="sc-fjdhpX byJkBY"
    onClick={[Function]}
    selected={true}
  >
    <p
      className="sc-jzJRlG hveoRz"
    >
      12:00
    </p>
  </button>
</div>
`;

exports[`Storyshots Title Default 1`] = `
<p
  className="sc-kAzzGY eMnoGp"
>
  Edinburgh
</p>
`;
